tests/baselines/reference/innerAliases.errors.txt
error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
tests/cases/compiler/innerAliases.ts(19,10): error TS2694: Namespace 'D' has no exported member 'inner'.
tests/cases/compiler/innerAliases.ts(21,11): error TS2339: Property 'inner' does not exist on type 'typeof D'.


!!! error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2749 tests/cases/compiler/innerAliases.ts:10:20: 'A.B.C' refers to a value, but is being used as a type here. Did you mean 'typeof A.B.C'?
==== tests/cases/compiler/innerAliases.ts (2 errors) ====
    module A {
        export module B {
            export module C {
                export class Class1 {}
            }
        }
    }
    
    module D {
        import inner = A.B.C; 
       
        var c1 = new inner.Class1(); 
    
        export module E { 
            export class Class2 {}
        }
    }
    
    var c: D.inner.Class1;
             ~~~~~
!!! error TS2694: Namespace 'D' has no exported member 'inner'.
    
    c = new D.inner.Class1();
              ~~~~~
!!! error TS2339: Property 'inner' does not exist on type 'typeof D'.
    
    